# starting-ragchatbot-codebase

./: CLAUDE.md  frontend-changes.md  pyproject.toml  query_flow_diagram.md
.claude/commands/: implement-feature.md
backend/: ai_generator.py  app.py  config.py  rag_system.py  search_tools.py  vector_store.py
backend/tests/: conftest.py  test_ai_generator.py  test_api_endpoints.py  test_integration.py  test_rag_system.py  test_search_tools.py
frontend/: index.html  script.js  style.css
scripts/: format.sh  lint.sh  quality.sh  typecheck.sh
